--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,3 +1,5 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.training.sanity.tests.LoginTests.StudentRegister</td></tr>
+<tr><td>com.training.sanity.tests.LoginTests.techCreateCourse</td></tr>
+<tr><td>com.training.sanity.tests.LoginTests.studentRegister</td></tr>
+<tr><td>com.training.sanity.tests.LoginTests.techCreateTest</td></tr>
 </table>
