--- a/test-output/old/Sample test Suite/methods-not-run.html
+++ b/test-output/old/Sample test Suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.training.sanity.tests.LoginTests.techCreateCourse</td></tr>
+<tr><td>com.training.sanity.tests.LoginTests.techReviewAssignment</td></tr>
+<tr><td>com.training.sanity.tests.LoginTests.studentRegister</td></tr>
 </table>
