--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="95b478">  <td>20/05/08 15:54:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTests.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.LoginTests@51565ec2]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>20/05/08 15:54:55</td>   <td>8627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.validLoginTest()[pri:2, instance:com.training.sanity.tests.LoginTests@51565ec2]">validLoginTest</td> 
-  <td>main@1122134344</td>   <td></td> </tr>
+<tr bgcolor="f385a2">  <td>20/05/15 22:37:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTests.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.LoginTests@1c93084c]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@482082765</td>   <td></td> </tr>
+<tr bgcolor="f385a2">  <td>20/05/15 22:37:58</td>   <td>12964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.techReviewAssignment()[pri:3, instance:com.training.sanity.tests.LoginTests@1c93084c]">techReviewAssignment</td> 
+  <td>main@482082765</td>   <td></td> </tr>
+<tr bgcolor="f385a2">  <td>20/05/15 22:37:54</td>   <td>9371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.validLoginTest()[pri:1, instance:com.training.sanity.tests.LoginTests@1c93084c]">validLoginTest</td> 
+  <td>main@482082765</td>   <td></td> </tr>
 </table>
