--- a/test-output/old/Sample test Suite/methods-alphabetical.html
+++ b/test-output/old/Sample test Suite/methods-alphabetical.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Sample test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="95b478">  <td>20/05/05 22:33:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTests.setUp()[pri:0, instance:com.training.sanity.tests.LoginTests@1593948d]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@876563773</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>20/05/05 22:33:34</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTests.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.LoginTests@1593948d]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@876563773</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>20/05/05 22:33:45</td>   <td>10675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTests.tearDown()[pri:0, instance:com.training.sanity.tests.LoginTests@1593948d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@876563773</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>20/05/05 22:33:42</td>   <td>7607</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.validLoginTest()[pri:0, instance:com.training.sanity.tests.LoginTests@1593948d]">validLoginTest</td> 
-  <td>main@876563773</td>   <td></td> </tr>
+<tr bgcolor="82eba5">  <td>20/05/16 00:13:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTests.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.LoginTests@63411512]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@581364120</td>   <td></td> </tr>
+<tr bgcolor="82eba5">  <td>20/05/16 00:13:40</td>   <td>11879</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.techCreateTest()[pri:4, instance:com.training.sanity.tests.LoginTests@63411512]">techCreateTest</td> 
+  <td>main@581364120</td>   <td></td> </tr>
+<tr bgcolor="82eba5">  <td>20/05/16 00:13:37</td>   <td>8998</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.validLoginTest()[pri:1, instance:com.training.sanity.tests.LoginTests@63411512]">validLoginTest</td> 
+  <td>main@581364120</td>   <td></td> </tr>
 </table>
